Feature: list item update api
