# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
+        "description": "名单管理系统",
         "title": "Swagger Example API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -33,46 +33,40 @@
                 "summary": "名单项查找功能",
                 "parameters": [
                     {
-                        "type": "boolean",
-                        "description": "是否生效",
-                        "name": "is_valid",
-                        "in": "query"
-                    },
-                    {
-                        "minLength": 1,
                         "type": "string",
-                        "description": "名单类型编码",
+                        "description": "Code",
                         "name": "code",
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
-                        "type": "integer",
-                        "default": 1,
-                        "description": "页码",
-                        "name": "page_index",
+                        "type": "boolean",
+                        "description": "是否生效",
+                        "name": "isValid",
                         "in": "query"
                     },
                     {
-                        "minimum": 10,
-                        "type": "integer",
-                        "default": 10,
-                        "description": "分页大小",
-                        "name": "page_size",
-                        "in": "query"
-                    },
-                    {
-                        "minLength": 1,
-                        "type": "string",
-                        "description": "排序方式",
-                        "name": "sorted_field",
-                        "in": "query"
-                    },
-                    {
-                        "minLength": 1,
                         "type": "string",
                         "description": "命名空间",
                         "name": "namespace",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "PageIndex",
+                        "name": "pageIndex",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "PageSize",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "SortedField",
+                        "name": "sortedField",
                         "in": "query"
                     }
                 ],
@@ -457,7 +451,8 @@
                 },
                 "message": {
                     "description": "回报message，在code != 0时，展示给前端",
-                    "type": "string"
+                    "type": "string",
+                    "example": "success"
                 }
             }
         },
@@ -474,7 +469,8 @@
                 },
                 "message": {
                     "description": "回报message，在code != 0时，展示给前端",
-                    "type": "string"
+                    "type": "string",
+                    "example": "success"
                 },
                 "total": {
                     "description": "总数量",
@@ -573,7 +569,8 @@
             "properties": {
                 "code": {
                     "description": "名单类型编码",
-                    "type": "string"
+                    "type": "string",
+                    "example": "telephone__red"
                 },
                 "extra": {
                     "description": "可自定义的结构, 不管控",
@@ -582,7 +579,8 @@
                 },
                 "id": {
                     "description": "主键id",
-                    "type": "string"
+                    "type": "string",
+                    "example": "60d2b17f70d9d2f0db53f866"
                 },
                 "is_valid": {
                     "description": "是否生效",
@@ -597,11 +595,13 @@
                 },
                 "namespace": {
                     "description": "命名空间",
-                    "type": "string"
+                    "type": "string",
+                    "example": "anti-fraud"
                 },
                 "value": {
                     "description": "名单项的值",
-                    "type": "string"
+                    "type": "string",
+                    "example": "13333333333"
                 }
             }
         },
@@ -610,22 +610,29 @@
             "properties": {
                 "code": {
                     "description": "名单类型编码",
-                    "type": "string"
+                    "type": "string",
+                    "example": "telephone__red"
                 },
                 "description": {
                     "description": "描述",
-                    "type": "string"
+                    "type": "string",
+                    "example": "descriptions"
                 },
                 "fields": {
                     "description": "这类名单的值被构建的字段",
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "telephone",
+                        "id_card"
+                    ]
                 },
                 "id": {
                     "description": "主键id",
-                    "type": "string"
+                    "type": "string",
+                    "example": "60d2b17f70d9d2f0db53f866"
                 },
                 "is_valid": {
                     "description": "是否生效",
@@ -633,7 +640,8 @@
                 },
                 "namespace": {
                     "description": "命名空间",
-                    "type": "string"
+                    "type": "string",
+                    "example": "anti-fraud"
                 }
             }
         },
@@ -642,11 +650,13 @@
             "properties": {
                 "key": {
                     "description": "field name",
-                    "type": "string"
+                    "type": "string",
+                    "example": "telephone"
                 },
                 "value": {
                     "description": "value",
-                    "type": "string"
+                    "type": "string",
+                    "example": "13333333333"
                 }
             }
         }
