# routes/list_item/get.go
@@ -2,18 +2,13 @@ package list_item
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/goools/tools/errorx"
+	"github.com/sirupsen/logrus"
+	"github.com/siskinc/srv-name-list/contants/error_code"
 	"github.com/siskinc/srv-name-list/internal/httpx"
-	"github.com/siskinc/srv-name-list/models"
+	listItemService "github.com/siskinc/srv-name-list/service/list_item"
 )
 
-type QueryListItemReq struct {
-	Namespace   *string `form:"namespace"`
-	IsValid     *bool   `form:"is_valid"`
-	Code        *string `form:"code"`
-	SortedField *string `form:"sorted_field"`
-	PageIndex   int64   `form:"page_index"`
-	PageSize    int64   `form:"page_size"`
-}
 
 // QueryListItem godoc
 // @TAGS 名单项
@@ -21,14 +16,22 @@ type QueryListItemReq struct {
 // @Description 名单项查找功能, 通过code, is_valid, 分页
 // @Accept json
 // @Produce json
-// @Param is_valid query boolean false "是否生效"
-// @Param code query string false "名单类型编码" minlength(1)
-// @Param page_index query int false "页码" minimum(1) default(1)
-// @Param page_size query int false "分页大小" minimum(10) default(10)
-// @Param sorted_field query string false "排序方式" minlength(1)
-// @Param namespace query string false "命名空间" minlength(1)
+// @Param message query listItemService.ListItemQueryInfo false "a1111111111"
 // @Success 200 {object} httpx.JSONResultPaged.{data=[]models.ListItem} "正常回包, 回复查询成功的名单类型数据"
 // @Router /item [get]
 func QueryListItem(c *gin.Context) {
-	httpx.SetRespJSON(c, []models.ListItem{}, "")
+	req := &listItemService.ListItemQueryInfo{}
+	err := c.Bind(req)
+	if err != nil {
+		logrus.Errorf("cannot format data to listItemService.ListItemQueryInfo")
+		httpx.SetRespErr(c, errorx.NewError(error_code.CustomForbiddenParameterInvalid, err))
+		return
+	}
+	listItemServiceObj := listItemService.NewListItemService()
+	listItemList, total, err := listItemServiceObj.Query(req)
+	if err != nil {
+		httpx.SetRespErr(c, err)
+		return
+	}
+	httpx.SetRespJSONPaged(c, listItemList, "", total)
 }
